--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
+* {
+  margin: 0;
+}
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  gap: 20px;
+}
+
+.header {
+  background: rgb(211, 215, 233);
+  border-radius: 5px;
+  border: 2px solid #000;
+}
+.form {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.datashow {
+  margin: 30px 70px 0px 70px;
+
+}
+.datapart {
+  margin: 5px;
+  display: flex;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  margin-top: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.datapart h4 {
+  color: black;
+  font-size: 25px;
+}
+.datapart h5 {
+  color: black;
+  font-size: 18px;
 }
